# rust-bech32

./: Cargo.toml  README.md
api/: all-features.txt  alloc-only.txt  no-features.txt
embedded/no-allocator/: Cargo.toml
embedded/no-allocator/src/: main.rs
embedded/with-allocator/: Cargo.toml
embedded/with-allocator/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_rnd.rs  encode_decode.rs  parse_hrp.rs
src/: hrp.rs  lib.rs  segwit.rs
src/primitives/: decode.rs  encode.rs  hrp.rs  iter.rs
tests/: bip_173_test_vectors.rs  bip_350_test_vectors.rs
