[package]
name = "bech32"
version = "0.10.0-beta"
authors = ["Groestlcoin Developers <groestlcoin@gmail.com>"]
repository = "https://github.com/Groestlcoin/rust-bech32"
documentation = "https://docs.rs/bech32/"
description = "Encodes and decodes the Bech32 format and implements the bech32 and bech32m checksums"
readme = "README.md"
keywords = ["base32", "encoding", "bech32", "groestlcoin", "cryptocurrency"]
categories = ["encoding", "cryptography::cryptocurrencies"]
license = "MIT"
edition = "2018"

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[target.'cfg(mutate)'.dev-dependencies]
mutagen = { git = "https://github.com/llogiq/mutagen" }
